Improve firmware layout Fix double scrollbar on some platforms Better scrollbar spacing

--- a/files/app/resource/css/admin.css
+++ b/files/app/resource/css/admin.css
@@ -945,7 +945,12 @@ input.password-toggle + button.icon.eye
 
 /* firmware and package update start */
 
-#firmware-update,
+#firmware-update
+{
+    display: flex;
+    flex-direction: column;
+    overflow-y: hidden !important;
+}
 #package-update
 {
     display: flex;
@@ -957,6 +962,13 @@ input.password-toggle + button.icon.eye
     display: flex;
     flex-direction: column;
     flex: 1;
+}
+#firmware-update-inner
+{
+    margin: 0 -10px;
+    padding: 0 10px;
+    padding-left: 2px;
+    overflow-y: scroll;
 }
 #firmware-upload,
 #package-upload
